feat: add YAML export, --parallelism flag, /api/file endpoint, .osscodeiq.yml config loading
- GraphCommand: add YAML output format using SnakeYAML serialization
- AnalyzeCommand: add --parallelism/-p flag to control max parallel threads
- Analyzer: add 3-arg run() accepting optional parallelism (null = virtual threads)
- GraphController: add /api/file endpoint with path traversal protection
- ProjectConfigLoader: load .osscodeiq.yml/.osscodeiq.yaml from project root
- FlowCommand: refactor to use FlowEngine (fixes pre-existing compilation errors)
- Fix FlowCommandTest and CliExtendedTest to use FlowEngine instead of GraphStore
- All 1093 tests pass

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>